@@ -7,6 +7,10 @@
 
 RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Gary Oberbrunner:
+
+    - New systemwide and per-user site_scons dirs.
+
   From Dirk Baechle:
 
     - XML fixes in User's Guide.
